--- a/ui-elements/package.json
+++ b/ui-elements/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "pages",
+  "name": "ui-elements",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite build --watch",
