--- a/background/manifests/manifest.json
+++ b/background/manifests/manifest.json
@@ -25,7 +25,7 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["content-script.js"]
+      "js": ["contents-script.umd.js"]
     }
   ],
   "options_page": "./pages/options.html"
