--- a/background/package.json
+++ b/background/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.145",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-copy-watch": "^0.0.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.7"
   }
