--- a/background/manifests/manifest.json
+++ b/background/manifests/manifest.json
@@ -1,32 +1,24 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Open a new tab next to the current tab",
+  "description": "Open a new tab next to the current tab.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.umd.js"
   },
-  "permissions": ["storage", "activeTab", "scripting"],
-  "action": {
-    "default_popup": "./pages/popup.html",
-    "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+  "permissions": ["tabs"],
+  "commands": {
+    "open-new-tab-next": {
+      "suggested_key": {
+        "default": "Alt+T"
+      },
+      "description": "Open a new tab next to the current tab."
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
-  },
-  "content_scripts": [
-    {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["contents-script.umd.js"]
-    }
-  ],
-  "options_page": "./pages/options.html"
+    "16": "/images/icon_16.png",
+    "32": "/images/icon_32.png",
+    "48": "/images/icon_48.png",
+    "128": "/images/icon_128.png"
+  }
 }
