--- a/npm-scripts/package.json
+++ b/npm-scripts/package.json
@@ -3,8 +3,8 @@
   "name": "npm-scripts",
   "version": "1.0.0",
   "scripts": {
-    "dev": "concurrently --restart-tries 10 \"yarn workspace background dev\" \"yarn workspace pages dev\" \"yarn workspace contents-script dev\"",
-    "build": "concurrently \"yarn workspace background build\" \"yarn workspace pages build\" \"yarn workspace contents-script build\""
+    "dev": "concurrently --restart-tries 10 \"npm run -w background dev\" \"npm run -w pages dev\" \"npm run -w contents-script dev\"",
+    "build": "concurrently \"npm run -w background build\" \"npm run -w pages build\" \"npm run -w contents-script build\""
   },
   "devDependencies": {
     "concurrently": "^6.2.0"
