--- a/background/package.json
+++ b/background/package.json
@@ -3,7 +3,7 @@
   "name": "background",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite build --watch --mode development",
     "build": "tsc && vite build"
   },
   "devDependencies": {
