--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "background",
     "contents-script",
     "npm-scripts"
-  ]
+  ],
+  "scripts": {
+    "dev": "concurrently --restart-tries 10 \"npm run -w background dev\" \"npm run -w pages dev\" \"npm run -w contents-script dev\"",
+    "build": "concurrently \"npm run -w background build\" \"npm run -w pages build\" \"npm run -w contents-script build\""
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0"
+  }
 }
