--- a/pages/package.json
+++ b/pages/package.json
@@ -18,7 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.3.2",
-    "vite": "2.3.2",
+    "vite": "^4.0.1",
     "vite-plugin-linaria": "^1.0.0"
   }
 }
