--- a/background/public/manifest.json
+++ b/background/public/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.umd.js"
+    "service_worker": "service-worker.umd.js"
   },
   "permissions": ["storage", "activeTab", "scripting"],
   "action": {
